--- a/app/views/cardtexts/index.html.erb
+++ b/app/views/cardtexts/index.html.erb
@@ -10,6 +10,7 @@
               <th> N rec</th>
               <th> Description </th>
               <th> Text </th>
+              <th> Holiday </th>
             </tr>
           </thead>
           <%= render @cardtexts %>
