--- a/app/views/cardtexts/show.html.erb
+++ b/app/views/cardtexts/show.html.erb
@@ -2,7 +2,10 @@
 <p>
   id: <%= @cardtext.id %>
 </p>
-
+<p>
+  <%= "Holiday: " %>
+  <%= @cardtext.holiday.name %>
+</p>
 <p>
   Filename:
 <br>  <%= @cardtext.filename %>
