--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,5 +1,5 @@
 <table class="container">
-   <h3> Emails </h3>
+   <h1> Emails </h1>
    <p>
      <%= link_to 'New Email', new_email_path %>
    </p>
@@ -10,10 +10,11 @@
         <tr>
           <th > N </th>
           <th > Name </th>
-          <th > Address </th>
-          <th > Company Mail Address </th>
-          <!-- <th > Checked  </th> -->
-          <th > Sent date </th>
+          <th > Personal and Company Mail </th>
+          <th > Holiday </th>
+          <th > Message </th>
+          <th > Will be Send </th>
+          <th > Sent  </th>
         </tr>
        </thead>
           <%= render @emails %>
