--- a/app/views/postcards/index.html.erb
+++ b/app/views/postcards/index.html.erb
@@ -7,7 +7,8 @@
         <table class="table table-bordered">
           <thead class="thead-light" align="center">
             <tr>
-              <th> N rec</th>
+              <!-- <th> N rec</th> -->
+              <th> Holiday </th>
               <th> File name </th>
               <th> Image </th>
             </tr>
