--- a/app/views/cardtexts/_form.html.erb
+++ b/app/views/cardtexts/_form.html.erb
@@ -1,11 +1,13 @@
 <%= form_with model: @cardtext, local: true do |form| %>
 
 <p>
-  <%#= form.label :filename %>
   <%= "Short description" %><br>
   <%= form.text_field :filename, id: :cardtext_filename, class: 'form-control' %>
 </p>
-
+<p>
+  <%= 'Holiday: ' %>
+  <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+</p>
 <p>
   <%= form.label :text %><br>
   <%= form.text_area :text, rows: 7, cols: 60, class: 'form-control' %>
