--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,18 +1,31 @@
 <%= form_with model: @email, local: true do |form| %>
   <p>
-    <%= "Email Id: #{@email.id}" %>
+    Email Id: <%= "#{@email.id}" %>
+  </p>
+  <p>
+    <%= 'FOR HOLIDAY: ' %>
+    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+  </p>
+  <p>
+    <%= 'Will be Send: ' %>
+    <%= date_select :will_send, start_year: Time.now, end_year: Time.now.year , order: [:month, :day] %>
   </p>
   <p>
     <%= form.label :name %>
     <%= form.text_field :name %>
-  </p>
-  <p>
     <%= form.label :address %>
     <%= form.text_field :address %>
   </p>
   <p>
     <%= 'Company Email Address: ' %>:
     <%= form.collection_select :mail_address_id, MailAddress.all, :id, :email, prompt: 'Select Mail Address Company' %>
+  </p>
+  <ol class="table-bordered">
+    <%= render @email.cardtexts if @email.cardtexts.present? %>
+  </ol>
+  <p>
+    <%= form.label :message %>
+    <%= form.text_area :message, rows: 3, cols: 50, class: 'form-control' %>
   </p>
   <p>
     <%= 'Check It: '%>
