--- a/app/views/emails/edit.html.erb
+++ b/app/views/emails/edit.html.erb
@@ -5,32 +5,27 @@
   <%= link_to 'Back to all Emails', emails_path %>
 </p>
 <br>
- <p> <%= link_to 'New Link: Email - Post Card ', new_email_email_card_path(@email)  %> </p>
+  <%= link_to 'Add New Post Card ', new_email_email_card_path(@email)  %>
 
- <%#= render 'email_cards/header_email_cards_list', email: @email %>
+<%#= render 'email_cards/header_email_cards_list', email: @email %>
 
+<!-- <ol class="table-bordered">
+  <%#= render @email.postcards if @email_cards.present? %>
+</ol>
+ -->
 
+<div>
 <% if @email_cards.present? %>
-  <table class="table table-bordered">
+  <table class="table ">
     <thead class="thead-light" align="center">
       <tr>
-        <!-- <th> # </th> -->
-        <!-- <th> Email </th> -->
         <th> Post Card </th>
       </tr>
     </thead>
-    <%#= render 'email_cards', email_cards: @email_cards  %>
-    <%#= render 'email_cards/email_card', email_card: @email_cards  %>
 
   <tbody>
     <% @email_cards.each do |email_card| %>
     <tr>
-     <!--  <td>
-        <%= email_card.id %>
-      --> </td>
-     <!--  <td>
-        <%= email_card.email.name %>
-      --> </td>
       <td>
         <%= image_tag email_card.postcard.image.url(:small) %>
         <%= email_card.postcard.filename %>
@@ -53,9 +48,7 @@
     <%= 'Empty list' %>
   </p>
 <% end %>
-
-
-
+</div>
 
 
 
