--- a/app/views/postcards/_form.html.erb
+++ b/app/views/postcards/_form.html.erb
@@ -13,6 +13,10 @@
     <%= form.text_field :filename %>
    --></p>
 <p>
+  <%= 'Holiday: ' %>
+  <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+</p>
+<p>
   <%= form.label :filename %> <br>
   <%= form.text_field :filename, id: :postcard_filename, class: 'form-control' %>
 </p>
