Add gem select2-rails

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "bootstrap";
+
+@import 'select2';
+@import 'select2-bootstrap';
+
 @import "app";
 @import "style";
-// @import "companies";
