Add rescue for email controller

--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -12,7 +12,8 @@
        <thead class="thead-light" align="center">
         <tr>
           <th > N </th>
-          <th > Name </th>
+          <th > Person </th>
+          <th > Discribe </th>
           <th > Personal and Company Mail </th>
           <th > Holiday </th>
           <th > Message </th>
