--- a/app/views/emails/_email.html.erb
+++ b/app/views/emails/_email.html.erb
@@ -3,10 +3,13 @@
     <%= email.id %>
   </td>
   <td >
+    <%= email.person.name %>
+  </td>
+  <td >
     <%= email.name %>
   </td>
   <td >
-    <%= "#{email.address} / #{email.mail_address.email}" %>
+    <%= "#{email.person.email} / #{email.mail_address.email}" %>
   </td>
   <td>
     <%= email.holiday.name if email.holiday_id.present? %>
