--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,18 +1,20 @@
 <%= form_with model: @email, local: true do |form| %>
   <p>
-    Email Id: <%= "#{@email.id}" %>
+    Email Id: <%= "#{@email.id}" %><br>
+    <%= 'To: ' %>
+    <%= form.collection_select :person_id, Person.all, :id, :name, prompt: 'Select person' %>
   </p>
   <p>
     <%= 'FOR HOLIDAY: ' %>
     <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
     <%= 'Will be Send: ' %>
-    <%= date_select :will_send, start_year: Time.now, end_year: Time.now.year , order: [:month, :day] %>
+    <%= date_select :email, :will_send, start_year: Time.now.year, end_year: Time.now.year  %>
   </p>
   <p>
     <%= "Name This Email: "  %>
     <%= form.text_field :name %>
-    <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%#= form.label :address %>
+    <%#= form.text_field :address %>
   </p>
   <p>
     <%= 'Company Email Address: ' %>:
