--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -17,6 +17,7 @@
           <th > Personal and Company Mail </th>
           <th > Holiday </th>
           <th > Message </th>
+          <th > Postcards </th>
           <th > Will be Send </th>
           <th > Sent  </th>
         </tr>
