--- a/app/views/postcards/_form.html.erb
+++ b/app/views/postcards/_form.html.erb
@@ -21,9 +21,13 @@
   <%= form.text_field :filename, id: :postcard_filename, class: 'form-control' %>
 </p>
 <p>
-    <%= form.file_field :image %>
+    <%= form.file_field :image, prompt: 'sssss'%>
     <%#= form.input :image, as: :file !!!  undefined method `input' for #<ActionView::Helpers::FormBuilder:0 ..%>
+
+   <%= image_tag @postcard.image.url(:medium) %>
+
 </p>
+
   <br>
   <p> <%= form.submit %> </p>
 <% end %>
