--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -1,10 +1,12 @@
   <div>
     <h1>Dates Holidays</h1>
-    <p>
+  <div class="digg_pagination">
+    <%= will_paginate @dates_holidays, :container => false %>
+  </div>
+
       <%#= unless @holiday.nil? do  %>
         <%= link_to 'New Date Holiday', new_dates_holiday_path %>
       <%# end %>
-    </p>
       <% if @dates_holidays.present? %>
         <table class="table table-bordered">
           <thead class="thead-light" align="center">
