--- a/app/views/email_cards/index.html.erb
+++ b/app/views/email_cards/index.html.erb
@@ -1,6 +1,10 @@
   <div>
     <h1>Links: Email - PostCards</h1>
-      <%= render 'header_email_cards_list' %>
+  <div class="digg_pagination">
+    <%= will_paginate @email_cards, :container => false %>
+  </div>
+
+   <%= render 'header_email_cards_list' %>
     <br>
 
   </div>
