--- a/app/views/cardtexts/index.html.erb
+++ b/app/views/cardtexts/index.html.erb
@@ -1,5 +1,8 @@
   <div>
     <h1> Card Texts </h1>
+    <div class="digg_pagination">
+      <%= will_paginate @cardtexts, :container => false %>
+    </div>
 
     <p> <%= link_to 'New Card Text', new_cardtext_path %> </p>
 
