--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,9 @@
 <h1> Companies </h1>
+<div class="digg_pagination">
+  <%= will_paginate @companies, :container => false %>
+</div>
 
-<p> <%= link_to 'New Company', new_company_path %> </p>
+ <%= link_to 'New Company', new_company_path %>
 
 <% if @companies.present? %>
   <table class="table table-bordered">
