--- a/app/views/companies_holidays/index.html.erb
+++ b/app/views/companies_holidays/index.html.erb
@@ -1,11 +1,14 @@
-  <div>
-    <h1>Companies Holidays</h1>
+<div>
+<h1>Companies Holidays</h1>
+<div class="digg_pagination">
+  <%= will_paginate @companies_holidays, :container => false %>
+</div>
 
-    <p> <%= link_to 'New Company Holiday', new_companies_holiday_path %> </p>
-      <%= render 'header_companies_holidays_list' %>
-    <br>
-  </div>
+  <p> <%= link_to 'New Company Holiday', new_companies_holiday_path %> </p>
+    <%= render 'header_companies_holidays_list' %>
   <br>
+</div>
+<br>
 <!-- <p>
   <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
