--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,24 +1,27 @@
-  <div>
-    <h1> Countries </h1>
+<div>
+  <h1> Countries </h1>
+<div class="digg_pagination">
+  <%= will_paginate @countries, :container => false %>
+</div>
 
-    <p> <%= link_to 'New Country', new_country_path %> </p>
+  <p> <%= link_to 'New Country', new_country_path %> </p>
 
-      <% if @countries.present? %>
-        <table class="table table-bordered">
-          <thead class="thead-light" align="center">
-            <tr>
-              <th> N record</th>
-              <th> Country </th>
-              <th> Code </th>
-            </tr>
-          </thead>
-          <%= render @countries %>
-        </table>
-      <% else %>
-        <p>
-          <%= 'Empty list' %>
-        </p>
-      <% end %>
-    <br>
-  </div>
+    <% if @countries.present? %>
+      <table class="table table-bordered">
+        <thead class="thead-light" align="center">
+          <tr>
+            <th> N record</th>
+            <th> Country </th>
+            <th> Code </th>
+          </tr>
+        </thead>
+        <%= render @countries %>
+      </table>
+    <% else %>
+      <p>
+        <%= 'Empty list' %>
+      </p>
+    <% end %>
+  <br>
+</div>
 
