--- a/app/views/email_texts/index.html.erb
+++ b/app/views/email_texts/index.html.erb
@@ -1,5 +1,8 @@
   <div>
     <h1>Links: Email - CardText</h1>
+  <div class="digg_pagination">
+    <%= will_paginate @email_texts, :container => false %>
+  </div>
 
     <p> <%= link_to 'New Email - PostCard link', new_email_email_text_path(@email) %> </p>
       <%= render 'header_email_texts_list' %>
