--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,11 +1,14 @@
 <table class="container">
-   <h1> Emails </h1>
-      <li class="nav-item active">
-         <%= link_to 'New Email', new_email_path %>
-      </li>
-      <li class="nav-item active">
-      <%= link_to 'CREATE EMAILS for TODAY', "/emails/create_emails" %>
-      </li>
+  <h1> Emails </h1>
+  <div class="digg_pagination">
+    <%= will_paginate @emails, :container => false %>
+  </div>
+  <li class="nav-item active">
+     <%= link_to 'New Email', new_email_path %>
+  </li>
+  <li class="nav-item active">
+  <%= link_to 'CREATE EMAILS for TODAY', "/emails/create_emails" %>
+  </li>
 
    <% if @emails.present? %>
      <table class="table table-bordered">
