--- a/app/views/mail_addresses/index.html.erb
+++ b/app/views/mail_addresses/index.html.erb
@@ -1,5 +1,8 @@
   <div>
     <h1> Mail Addresses </h1>
+  <div class="digg_pagination">
+    <%= will_paginate @mail_addresses, :container => false %>
+  </div>
 
     <p> <%= link_to 'New Mail Address', new_mail_address_path %> </p>
 
