--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,5 +1,8 @@
   <div>
     <h1> People </h1>
+  <div class="digg_pagination">
+    <%= will_paginate @people, :container => false %>
+  </div>
 
     <p> <%= link_to 'New Person', new_person_path %> </p>
 
