--- a/app/views/postcards/index.html.erb
+++ b/app/views/postcards/index.html.erb
@@ -1,5 +1,8 @@
   <div>
     <h1> Postcards </h1>
+  <div class="digg_pagination">
+    <%= will_paginate @postcards, :container => false %>
+  </div>
 
     <p> <%= link_to 'New Postcard', new_postcard_path %> </p>
 
