--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,13 +1,16 @@
   <div>
     <h1> Types </h1>
+  <div class="digg_pagination">
+    <%= will_paginate @types, :container => false %>
+  </div>
 
     <p> <%= link_to 'New Type', new_type_path %> </p>
 
       <% if @types.present? %>
-        <table>
-          <thead class="thead-light" align="center">
+   <table class="table table-bordered">
+       <thead class="thead-light" align="center">
             <tr>
-              <th> N record</th>
+              <th> N </th>
               <th> Type name </th>
             </tr>
           </thead>
