--- a/app/views/holidays/_holiday.html.erb
+++ b/app/views/holidays/_holiday.html.erb
@@ -1,8 +1,8 @@
 <tr>
-<!--   <td >
-    <%#= holiday.id %>
+  <td >
+    <%= holiday.id %>
   </td>
- -->  <td >
+  <td >
     <%= holiday.name %>
   </td>
   <td >
