--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -17,7 +17,7 @@
           <th > N </th>
           <th > Person </th>
           <th > Discribe </th>
-          <th > Personal and Company Mail </th>
+          <th > Mail Address </th>
           <th > Holiday </th>
           <th > Message </th>
           <th > Postcards </th>
