--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -1,5 +1,5 @@
   <div>
-    <h1>Dates Holidays</h1>
+    <h1>Calendar Holidays</h1>
   <div class="digg_pagination">
     <%= will_paginate @dates_holidays, :container => false %>
   </div>
