--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -7,7 +7,9 @@
 
   <p>
     <%= 'Birthday: ' %>
-    <%= date_select :person, :birthday, start_year: Time.now.year - 70, end_year: Time.now.year - 18 %>
+    <%#= date_select :person, :birthday, start_year: Time.now.year - 70, end_year: Time.now.year - 18 %>
+    <%= date_field :person, :birthday %>
+
   </p>
 
   <p>
