--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -10,12 +10,12 @@
     <table class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
-          <th > N </th>
+          <th class="hiden"> N </th>
 
           <th class="sort-by-title pointer col-md-auto">
             <%= 'Holiday' %>
-            <%#= octicon 'arrow-up', class: 'text-success hide ' %>
-            <%#= octicon 'arrow-down' , class: 'text-success hide ' %>
+            <%= octicon 'arrow-up', class: 'text-success hide' %>
+            <%= octicon 'arrow-down' , class: 'text-success hide' %>
           </th>
           <th > Type </th>
         </tr>
