--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -10,7 +10,7 @@
     <table class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
-          <th class="hiden"> N </th>
+          <th class="hide"> N </th>
 
           <th class="sort-by-title pointer col-md-auto">
             <%= 'Holiday' %>
