--- a/app/views/dates_holidays/edit.html.erb
+++ b/app/views/dates_holidays/edit.html.erb
@@ -1,9 +1,10 @@
 <h1> Edit Date Holiday</h1>
 <%= render 'form' %>
-<p>
-  <%#= link_to 'Back to all dates holidays', holiday_dates_holidays_path %>
-</p><br>
 <!-- <p>
+  <%#= link_to(body, 'Back to all dates holidays', dates_holidays_path )%>
+</p><br>
+ -->
+ <!-- <p>
   <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
  -->
