--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -5,6 +5,8 @@
 
     <%#= unless @holiday.nil? do  %>
       <%= link_to 'New Date Holiday', new_dates_holiday_path %>
+      |
+      <%= link_to 'View left holidays', new_dates_holiday_path %>
     <%# end %>
     <% if @dates_holidays.present? %>
       <table class="table table-bordered">
