--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
 <% flash.each do |key, message| %>
-  <% key = key == 'alert' ? 'danger' : 'info' %>
+  <% key = key.eql?('alert') ? 'danger' : 'info' %>
   <%= content_tag :div, message, class: "alert alert-#{key}" %>
 <%end %>
