--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -92,13 +92,15 @@
           <%= link_to 'Card Texts', cardtexts_path %>
         </a>
       </li>
+
+  <!--
       <li class="nav-item active">
         <a class="nav-link">
           <%= link_to 'ADMIN DASHBOARD ', rails_admin_path %>
         </a>
       </li>
 
-  <!--     <li class="nav-item active">
+   <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Reserved Item', mail_addresses_path %>
         </a>
