--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -82,12 +82,12 @@
           <%= link_to 'Post Cards', postcards_path %>
         </a>
       </li>
-      <li class="nav-item active">
+<!--       <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Emails - Cards', email_cards_path %>
         </a>
       </li>
-      <li class="nav-item active">
+ -->      <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Card Texts', cardtexts_path %>
         </a>
