--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -14,8 +14,8 @@
 
           <th class="sort-by-title pointer col-md-auto">
             <%= 'Holiday' %>
-            <%= octicon 'arrow-up', class: 'text-success hide' %>
-            <%= octicon 'arrow-down' , class: 'text-success hide' %>
+            <%#= octicon 'arrow-up', class: 'text-success hide' %>
+            <%#= octicon 'arrow-down' , class: 'text-success hide' %>
           </th>
           <th > Type </th>
         </tr>
