Refactoring: dates_holidays MVC

--- a/app/views/dates_holidays/edit.html.erb
+++ b/app/views/dates_holidays/edit.html.erb
@@ -1,10 +1,11 @@
 <h1> Edit Date Holiday</h1>
 <%= render 'form' %>
-<!-- <p>
-  <%#= link_to(body, 'Back to all dates holidays', dates_holidays_path )%>
-</p><br>
- -->
- <!-- <p>
+<br>
+<p>
+  <%= link_to 'Back to List Dates holidays', dates_holidays_path %>
+</p>
+ <!-- <br>
+ <p>
   <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
  -->
