--- a/app/views/dates_holidays/new.html.erb
+++ b/app/views/dates_holidays/new.html.erb
@@ -2,5 +2,5 @@
   <%= render 'form' %>
 <br>
 <p>
-<%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday.holiday_id) %>
+  <%= link_to 'Back to List Dates holidays', dates_holidays_path %>
 </p>
