--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -73,7 +73,7 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Mail Adresses', mail_addresses_path %>
+          <%= link_to 'Mail Addresses', mail_addresses_path %>
         </a>
       </li>
 
