--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -2,7 +2,7 @@
 
   <p>
     <%= 'Name: ' %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, size: 80 %>
   </p>
 
   <p>
@@ -14,7 +14,7 @@
 
   <p>
     <%= 'Email: ' %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, size: 80 %>
   </p>
 
   <br>
