Add mime_type for attachments

--- a/app/views/greetings_mailer/send_message.html.erb
+++ b/app/views/greetings_mailer/send_message.html.erb
@@ -3,7 +3,7 @@ Hi, <%= @name %><br>
 </h1>
 <h2><%= @greetings_text %></h2>
 <% @files.each do |file| %>
-<%= image_tag attachments[file].url %>
+<%#= image_tag attachments[file].url %>
 <br>
 <% end %>
 
