--- a/app/views/emails/edit.html.erb
+++ b/app/views/emails/edit.html.erb
@@ -9,9 +9,10 @@
 
 <%#= render 'email_cards/header_email_cards_list', email: @email %>
 
-<!-- <ol class="table-bordered">
-  <%#= render @email.postcards if @email_cards.present? %>
-</ol>
+<!--
+  <ol class="table-bordered">
+    <%#= render @email.postcards if @email_cards.present? %>
+  </ol>
  -->
 
 <div>
@@ -53,9 +54,6 @@
   </p>
 <% end %>
 </div>
-
-
-
- <%#= render 'email_texts/list_email_texts', email: @email  %>
+<%#= render 'email_texts/list_email_texts', email: @email  %>
 
 
