--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -9,7 +9,7 @@
     <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
   </p>
   <p>
-    <%= "Name This Email: "  %>
+    <%= 'Description: '  %>
     <%= form.text_field :name, size: 60 %>
 
     <% if @email.sent_date.present? %>
