--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -11,7 +11,7 @@
 <%= link_to 'Edit email', edit_email_path(@email) %>
 
 <br>
-<!-- <p>
-  <%#= link_to 'Back to all emails', emails_path %>
+<p>
+  <%= link_to 'Back to all emails', emails_path %>
 </p>
- -->
+
