Add field subject to email

--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -15,11 +15,11 @@
       <table class="table table-bordered">
         <thead class="thead-light" align="center">
           <tr>
-            <th> N </th>
             <th> Day / Month </th>
             <th> Holiday </th>
             <th> Companies </th>
             <th> People </th>
+            <th> N rec</th>
           </tr>
         </thead>
         <%= render @dates_holidays %>
