--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -15,9 +15,10 @@
      <table class="table table-bordered">
        <thead class="thead-light" align="center">
         <tr>
-          <th > N </th>
+          <!-- <th > N </th> -->
           <th > Person </th>
           <th > Description </th>
+          <th > Subject </th>
           <th > Mail Address </th>
           <th > Holiday </th>
           <th > Message </th>
