--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -10,16 +10,22 @@
   <p>
     <%= 'Description: '  %>
     <%= form.text_field :name, size: 60 %>
+    <a style="margin: 5%">
+      <%= 'Subject: '  %>
+      <%= form.text_field :subject, size: 60 %>
+    </a>
     <% if @email.sent_date.present? %>
-      <a style="margin: 10%">
+      <a style="size: 100; margin: 10%">
         <%= form.label :address %>
         <%= form.text_field :address, size: 40 %>
       </a>
     <% else %>
       <p>
-        <%= form.label :address %>
-        <%= form.text_field :address, size: 40%>
-        <a style="margin: 10%">
+        <a style="size: 100;">
+          <%= form.label :address %>
+          <%= form.text_field :address, size: 40%>
+        </a>
+        <a style="size: 100;  margin: 10%">
           <%= 'Company Email Address: ' %>
           <%= form.collection_select :mail_address_id, MailAddress.joins(:companies_person).where('companies_people.person_id =  ?', @email.person_id), :id,
               :email, prompt: 'Select Mail Address Company', size: 60%>
