--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -3,8 +3,7 @@
     <%= person.name %>
   </td>
   <td>
-    <%= person.birthday_index %>
-    <%#= date_field(:person, :birthday ) %>
+    <%= person.birthday_format %>
   </td>
   <td>
     <%= person.email %>
