Remove method send email to model Email

--- a/app/views/emails/send_e.html.erb
+++ b/app/views/emails/send_e.html.erb
@@ -1,4 +1,4 @@
-<h4>  file: send_e </h4>
+<h4>  '/app/views/emails/send_e.html.erb' </h4>
 <p>
   <%= link_to 'Back to all Emails', emails_path %>
 </p>
