Add will_paginate under table in index.html.erb

--- a/app/views/cardtexts/index.html.erb
+++ b/app/views/cardtexts/index.html.erb
@@ -23,6 +23,10 @@
           <%= 'Empty list' %>
         </p>
       <% end %>
+    <div class="digg_pagination">
+      <%= will_paginate @cardtexts, :container => false %>
+    </div>
+
     <br>
   </div>
 
