--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -21,5 +21,8 @@
     <%= 'Empty list' %>
   </p>
 <% end %>
+<div class="digg_pagination">
+  <%= will_paginate @companies, :container => false %>
+</div>
 <br>
 
