--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -26,3 +26,6 @@
     <%= 'Empty list' %>
   </p>
 <% end %>
+<div class="digg_pagination">
+  <%= will_paginate @dates_holidays, :container => false %>
+</div>
