--- a/app/views/mail_addresses/index.html.erb
+++ b/app/views/mail_addresses/index.html.erb
@@ -1,27 +1,30 @@
-  <div>
-    <h1> Mail Addresses </h1>
+<div>
+  <h1> Mail Addresses </h1>
   <div class="digg_pagination">
     <%= will_paginate @mail_addresses, :container => false %>
   </div>
 
-    <p> <%= link_to 'New Mail Address', new_mail_address_path %> </p>
+  <p> <%= link_to 'New Mail Address', new_mail_address_path %> </p>
 
-      <% if @mail_addresses.present? %>
-        <table class="table table-bordered">
-          <thead class="thead-light" align="center">
-            <tr>
-              <th> N rec</th>
-              <th> Name </th>
-              <th> Person / Company</th>
-            </tr>
-          </thead>
-          <%= render @mail_addresses %>
-        </table>
-      <% else %>
-        <p>
-          <%= 'Empty list' %>
-        </p>
-      <% end %>
-    <br>
+    <% if @mail_addresses.present? %>
+      <table class="table table-bordered">
+        <thead class="thead-light" align="center">
+          <tr>
+            <th> N rec</th>
+            <th> Name </th>
+            <th> Person / Company</th>
+          </tr>
+        </thead>
+        <%= render @mail_addresses %>
+      </table>
+    <% else %>
+      <p>
+        <%= 'Empty list' %>
+      </p>
+    <% end %>
+  <div class="digg_pagination">
+    <%= will_paginate @mail_addresses, :container => false %>
   </div>
+  <br>
+</div>
 
