--- a/app/views/shared/pagination.html.erb
+++ b/app/views/shared/pagination.html.erb
@@ -1,7 +1,6 @@
 <div class="digg_pagination">
-     <!--  <div class="page_info">
-        <%= page_entries_info @holidays %>
-      --> </div>
-
-        <%= will_paginate @holidays, :container => false %>
+<!--  <div class="page_info">
+        <%#= page_entries_info @holidays %>
+</div> -->
+  <%= will_paginate @holidays, :container => false %>
 </div>
