--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,26 +1,29 @@
-  <div>
-    <h1> Types </h1>
+<div>
+  <h1> Types </h1>
   <div class="digg_pagination">
     <%= will_paginate @types, :container => false %>
   </div>
 
-    <p> <%= link_to 'New Type', new_type_path %> </p>
+  <p> <%= link_to 'New Type', new_type_path %> </p>
 
-      <% if @types.present? %>
-   <table class="table table-bordered">
-       <thead class="thead-light" align="center">
-            <tr>
-              <th> N </th>
-              <th> Type name </th>
-            </tr>
-          </thead>
-          <%= render @types %>
-        </table>
-      <% else %>
-        <p>
-          <%= 'Empty list' %>
-        </p>
-      <% end %>
-    <br>
+    <% if @types.present? %>
+ <table class="table table-bordered">
+     <thead class="thead-light" align="center">
+          <tr>
+            <th> N </th>
+            <th> Type name </th>
+          </tr>
+        </thead>
+        <%= render @types %>
+      </table>
+    <% else %>
+      <p>
+        <%= 'Empty list' %>
+      </p>
+    <% end %>
+  <div class="digg_pagination">
+    <%= will_paginate @types, :container => false %>
   </div>
+  <br>
+</div>
 
