Sorting by name  Holidays

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 
 @import 'select2';
 @import 'select2-bootstrap';
-
+@import 'global';
 @import "app";
 @import "style";
 @import "digg_pagination";
